Fix overflow on customization example

--- a/example/custom-terminal/public/style.css
+++ b/example/custom-terminal/public/style.css
@@ -25,8 +25,7 @@ html, body {
   margin: 0;
   height: 100%;
   width: 100%;
-  overflow: scroll;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
